# bworser-action

./: .env.example  DEPLOYMENT.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .vercelignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/agent/: browser_agent.py  compare_agent.py
backend/api/: index.py
backend/auth/: __init__.py  clerk.py
backend/db/: supabase.py
backend/rag/: agent.py  auth.py  database.py  document_processor.py  models.py  tools.py  vector_store.py
backend/scripts/: ingest_cs_topics.py
backend/services/: ai.py
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: MessageContent.tsx
frontend/lib/: api.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
supabase/migrations/: 001_init.sql  20250310000000_users_conversations_messages.sql
